wip update to missing pieces

--- a/docs/changehistory/3.0.0.md
+++ b/docs/changehistory/3.0.0.md
@@ -1772,10 +1772,11 @@ SAML support has officially been dropped as a supported workflow. All related AP
 
 ### @itwin/core-bentley
 
-| Removed         | Replacement                                                |
-| --------------- | ---------------------------------------------------------- |
-| `Config`        | Use `process.env` to access environment variables directly |
-| `EnvMacroSubst` | _eliminated_                                               |
+| Removed               | Replacement                                                |
+| --------------------- | ---------------------------------------------------------- |
+| `Config`              | Use `process.env` to access environment variables directly |
+| `EnvMacroSubst`       | _eliminated_                                               |
+| `Logger.makeMetaData` | `Logger.getMetaData`                                       |
 
 ### @itwin/presentation-common
 
